Okay. A merger thing

--- a/templates/box-feature.html
+++ b/templates/box-feature.html
@@ -3,8 +3,8 @@
                   <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
                 </tr>
                 <tr>
-                  <td align="left" class="headline box-red" style="border-collapse: collapse;background-color: hsl(0, 0%, 94%);border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;">
-                    <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;">JOIN THE NEAR FUTURE LABORATORY DISCORD</h1>
+                  <td align="left" style="border-collapse: collapse;background-color: {{ item['background_color'] }};border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;">
+                    <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: {{ item['text_color'] }};margin: 0;padding: 0;">{{ item ['callout'] }}</h1>
                   </td>
                 </tr>
                 <tr>
@@ -16,7 +16,7 @@
                       <tbody>
                         <tr>
                           <td class="padt20 padr10 padb5 padl20" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-bottom: 5px;padding-left: 20px;" valign="top">
-                            <p style="font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;"><img src="https://backoffice.nearfuturelaboratory.com/images/site/LaboratoryGuy_ComeToWhereTheFutureIs__300px.webp" alt="⊂(◉‿◉)つ" width="290" height="auto" class="img" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;"></p>
+                            <p style="font-family: '{{ item['font_family'] }}'; font-style: '{{ item['font_style'] }};font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;"><img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="290" height="auto" class="img" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;"></p>
                           </td>
                         </tr>
                       </tbody>
@@ -27,21 +27,16 @@
                       <tbody>
                         <tr>
                           <td class="padt15 padr20 padl10 padb5 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-bottom: 5px;padding-left: 10px;" valign="top">
-                            <h2 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;">
-                              <a href="https://patreon.com/nearfuturelaboratory" style="text-decoration: underline;color: #000000 !important;">COME TO WHERE THE FUTURE IS!</a> →</h2>
-                            <p style="font-size: 16px;line-height: 18px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">The Near Future Laboratory Has A Community. We Do Futures Projects at the Vanguard of The Not True *<em>Yet</em></p>
+                            <h2 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color:{{ item['text_color'] }};margin: 0;padding: 0 0 15px 0;">
+                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['link_text_1']}}</a> →</h2>
+                            <p style="font-family: '{{ item['font_family'] }}'; font-style: '{{ item['font_style'] }};font-size: 16px;line-height: 18px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['subtitle'] }}</p>
                             <p style="text-align: center; font-size: 15px;">✳Paid Subscribers Get Discord Access!✳</p>
 
                                 <p style="text-align: center; font-size: 16px; line-height: 12px;">Current Projects</p>
-                                <p style="font-size: 14px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">
-                                ↯ A Magazine from a Future with AI<br>
-                                ↯ A Magazine from a Future of Cinema<br>
-                                ↯ A Magazine from a Fashion Future<br>
-                                ↯ General Seminar's Starting Up!<br>
-                                ↯ Foresight Futures Super Seminar Soon!
-                                ↯ Weekly Office Hours & Coffee Calls
+                                <p style="font-size: 14px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
+                              {{ item['main_copy']}}
                             </p>
-                            <p class="small grey" style="font-size: 14px;line-height: 19px;font-weight: 400;color: #837089 !important;padding: 0;margin: 0;margin-bottom: 15px;"><a href="https://patreon.com/nearfuturelaboratory" style="text-decoration: none;text-align: right;display: inline-block;font-size: 15px;line-height: 25px;font-weight: 400;float: left;color: #707070 !important;">Join the NFL Discord</a></p>
+                            <p class="small grey" style="font-size: 14px;line-height: 19px;font-weight: 400;color: {{ item['background_color'] }} !important;padding: 0;margin: 0;margin-bottom: 15px;"><a href="https://patreon.com/nearfuturelaboratory" style="text-decoration: none;text-align: right;display: inline-block;font-size: 15px;line-height: 25px;font-weight: 400;float: left;color: {{ item['light_text_color'] }} !important;">{{ item['link_text_2']}}</a></p>
                           </td>
                         </tr>
                       </tbody>
