--- a/templates/featured-special.html
+++ b/templates/featured-special.html
@@ -1,7 +1,7 @@
                 <!-- start featured-special.html-->
                 <tr>
                   <td align="left" style="border-radius: 0.5rem; border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px; padding-bottom: 15px; background-color: #E1EFE6;">
-                    <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;"><a href="https://shop.nearfuturelaboratory.com/products/androids-dream-of-electric-sheep" style="text-decoration: none; display: inline-block; font-size: 1.2rem;color:#5f5454">Androids Dream of Electric Sheep</a><a href="https://shop.nearfuturelaboratory.com/products/androids-dream-of-electric-sheep" style="text-decoration: none;display: inline-block;font-size: 12px;line-height: 25px;font-weight: 400;float: right;color: #6d6b57 !important;">SHOP OF FROM AN ADJACENT TIMELINE</a>
+                    <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;"><a href="{{ item['link_ref']}}" style="text-decoration: none; display: inline-block; font-size: 1.2rem;color:#5f5454">{{ item['link_text']}}</a><a href="{{ item['link_ref']}}" style="text-decoration: none;display: inline-block;font-size: 12px;line-height: 25px;font-weight: 400;float: right;color: #6d6b57 !important;">{{ item['title']}}</a>
                     </h1>
                   </td>
                 </tr>
@@ -16,7 +16,7 @@
                         <tr>
                           <td class="padt20 padr10 padl20 padb5" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-bottom: 5px;padding-left: 20px;" valign="top">
                             <p style="font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">
-                              <img src="http://backoffice.nearfuturelaboratory.com/ad-images/house/2024/AndroidsDream_BookAndFoilPack_02_101823_1945_0180_NEBULA.webp" alt="⊂(◉‿◉)つ" width="auto" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 516px;width: 100%; border-radius: 0.8rem;">
+                              <img src="{{item['image_url']}}" alt="⊂(◉‿◉)つ" width="auto" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 516px;width: 100%; border-radius: 0.8rem;">
                             </p>
                           </td>
                         </tr>
@@ -29,11 +29,10 @@
                         <tr>
                           <td class="padt15 padr20 padl10 padb5 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-bottom: 5px;padding-left: 10px;" valign="top">
                             <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                              <a href="https://shop.nearfuturelaboratory.com/products/androids-dream-of-electric-sheep" style="text-decoration: underline;color: #000000 !important;">Androids Dream of Electric Sheep</a> →</h2>
-                            <h3 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 18px;font-weight: 400;margin: 0;padding: 0 0 5px 0; color: #6d6b57 !important;">Pop Psychology</h3>
-                            <p style="font-size: 14px;line-height: 18px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">Our latest artifact from a possible future in which the Sony Walkman failed..and the Sony Aibo caught on globally, and Sony dominated in the world of domesticated robots, spurring a 1980s revolution in artificial intelligence. This book tells the story of the P.K. Dick classic 'Do Androids Dream of Electric Sheep', only as a counter factual in which, yeah, of course they do..all intelligent beings dream, right HAL? 
-                              <p style="font-size: 14px;line-height: 15px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">But wait! Includes Flash Cards Of <a href="https://androidsdream.ai" style="text-decoration: underline;color: #000000 !important;">All Major Manufacturers Makes and Models</a> of Honeywell & Pepperidge Farms Electronic Sheep!</p>
-                            <p style="font-size: 15px;line-height: 14px;font-weight: 600;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;"><a href="https://androidsdream.ai" style="text-decoration: underline;color: #000000 !important;"><a href="https://shop.nearfuturelaboratory.com/products/androids-dream-of-electric-sheep" style="text-decoration: underline;color: #000000 !important;">Buy your set now!</a></p>
+                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['link_text']}}</a> →</h2>
+                            <h3 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 18px;font-weight: 400;margin: 0;padding: 0 0 5px 0; color: #6d6b57 !important;">{{ item['subtitle']}}</h3>
+                            <p style="font-size: 14px;line-height: 18px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }} 
+                              </p>
                           </td>
                         </tr>
                       </tbody>
