Templates and stuff

--- a/templates/featured-item.html
+++ b/templates/featured-item.html
@@ -19,9 +19,8 @@
               <tr>
                 <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
                   <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                    <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['title']}}
-                    </a></h2>
-                  <h3 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: {{ item['light_text_color']}} !important;">A beautiful opportunity to see the shape of arts education nowadays.</h3>
+                    <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['title']}}</a></h2>
+                  <h3 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: {{ item['light_text_color']}} !important;">{{ item['subtitle']}}</h3>
                   <p style="font-family: '{{ item['font_family'] }}';  '{{ item['font_style'] }}; font-size: 16px;line-height: 23px;font-weight: 400;color:{{ item['text_color' ]}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }}<br>
                     <a href="{{ item['link_ref'] }}" style="text-decoration: underline;color:{{ item['text_color' ]}} !important;">Read More</a> ⇒</p>
                 </td>
