--- a/templates/box-item-header.html
+++ b/templates/box-item-header.html
@@ -1,5 +1,7 @@
+               <!-- start box-item-header.html-->
                <tr>
                 <td align="left" class="headline" style="background: #f2f2f2;border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;border-radius: 0.8rem;">
-                  <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;">Support Small Scale Stuff</h1>
+                  <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;">{{ item['header_text']}}</h1>
                 </td>
               </tr>
+              <!-- end start-item-header.html -->
