--- a/templates/toc-head-item.html
+++ b/templates/toc-head-item.html
@@ -36,7 +36,7 @@
   <!-- start main-toc.html -->
   <tr>
     <td align="left" class="padt20 padl20 padr20 padb10" style="border-collapse: collapse;padding-top: 20px;padding-right: 20px;padding-bottom: 10px;padding-left: 20px;">
-      <p class="large" style="font-size: 21px;line-height: 30px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">
+      <p class="large" style="font-size: 21px;line-height: 30px;font-weight: 400;color:{{ item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">
 {{ item['main_toc_text'] }}
       </p>
       <!-- start salutation -->
