--- a/templates/box-feature.html
+++ b/templates/box-feature.html
@@ -1,10 +1,7 @@
                 <!-- start box-feature.html -->
                 <tr>
-                  <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
-                </tr>
-                <tr>
                   <td align="left" style="border-collapse: collapse;background-color: {{ item['background_color'] }};border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;">
-                    <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: {{ item['text_color'] }};margin: 0;padding: 0;">{{ item ['callout'] }}</h1>
+                    <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: {{ item['header_font_weight']}};line-height: 23px;color: {{ item['text_color'] }};margin: 0;padding: 0;">{{ item ['callout'] }}</h1>
                   </td>
                 </tr>
                 <tr>
@@ -15,8 +12,8 @@
                     <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
                       <tbody>
                         <tr>
-                          <td class="padt20 padr10 padb5 padl20" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-bottom: 5px;padding-left: 20px;" valign="top">
-                            <p style="font-family: '{{ item['font_family'] }}'; font-style: '{{ item['font_style'] }};font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;"><img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="290" height="auto" class="img" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;"></p>
+                          <td class="padt20 padr10 padb5 padl20" style="border-collapse: collapse;padding-top: 0px;padding-right: 10px;padding-bottom: 5px;padding-left: 20px;" valign="top">
+                            <p style="font-family: '{{ item['font_family'] }}'; font-style: '{{ item['font_style'] }};font-size: 16px;line-height: 23px;font-weight: {{ item['font_weight']}};color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;"><img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="290" height="auto" class="img" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;"></p>
                           </td>
                         </tr>
                       </tbody>
@@ -26,17 +23,15 @@
                     <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
                       <tbody>
                         <tr>
-                          <td class="padt15 padr20 padl10 padb5 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-bottom: 5px;padding-left: 10px;" valign="top">
-                            <h2 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color:{{ item['text_color'] }};margin: 0;padding: 0 0 15px 0;">
+                          <td class="padt15 padr20 padl10 padb0 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-bottom: 0px;padding-left: 10px;" valign="top">
+                            <h2 style="mso-line-height-rule: exactly;font-size: 15px;line-height: 23px;font-weight: 600;color:{{ item['light_text_color'] }};margin: 0;padding: 0 0 5px 0;">
                               <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['link_text_1']}}</a> →</h2>
-                            <p style="font-family: '{{ item['font_family'] }}'; font-style: '{{ item['font_style'] }};font-size: 16px;line-height: 18px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['subtitle'] }}</p>
-                            <p style="text-align: center; font-size: 15px;">✳Paid Subscribers Get Discord Access!✳</p>
-
-                                <p style="text-align: center; font-size: 16px; line-height: 12px;">Current Projects</p>
-                                <p style="font-size: 14px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
+                            <p style="font-family: '{{ item['subtitle_font_family'] }}'; font-style: '{{ item['subtitle_font_style'] }}';font-size: 14px;line-height: 15px;font-weight:  '{{ item['subtitle_font_weight']}}';color: {{ item['light_text_color'] }};padding: 0;margin: 0;">{{ item['subtitle'] }}</p>
+                            <p style="text-align: center; font-size: 15px;">{{item["value_prop"]}}</p>
+                                <p style="font-size: 15px;font-weight: {{ item['font_weight']}};color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 14px;">
                               {{ item['main_copy']}}
                             </p>
-                            <p class="small grey" style="font-size: 14px;line-height: 19px;font-weight: 400;color: {{ item['background_color'] }} !important;padding: 0;margin: 0;margin-bottom: 15px;"><a href="https://patreon.com/nearfuturelaboratory" style="text-decoration: none;text-align: right;display: inline-block;font-size: 15px;line-height: 25px;font-weight: 400;float: left;color: {{ item['light_text_color'] }} !important;">{{ item['link_text_2']}}</a></p>
+                            <p class="small grey" style="font-size: 15px;line-height: 16px;font-weight: '{{ item['font_weight']}}'';color: {{ item['background_color'] }} !important;padding: 0;margin: 0;margin-bottom: 15px;"><a href="{{ item['link_ref']}}" style="text-decoration: underline;text-align: right;display: inline-block; float: left;color: {{ item['text_color'] }} !important;">{{ item['link_text_2']}}</a></p>
                           </td>
                         </tr>
                       </tbody>
