--- a/templates/toc-head-item.html
+++ b/templates/toc-head-item.html
@@ -1,7 +1,8 @@
-<!-- INTRO Start -->
+<!-- INTRO Start --><!-- start toc-head-item_1 -->
+
 <tr>
-    <td align="left" style="border-collapse: collapse;">
-      <!-- start subject-line.html -->
+  <td align="center" bgcolor="#FFFFFF" style="background-color: #FFFFFF;border-collapse: collapse;" valign="top">      
+    <!-- start subject-line.html -->
       <!--[if mso]>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 <tr><td width="50%" valign="top"><![endif]-->
@@ -33,7 +34,6 @@
     </td>
   </tr>
   <!-- end subject-line.html -->
-  <!-- start main-toc.html -->
   <tr>
     <td align="left" class="padt20 padl20 padr20 padb10" style="border-collapse: collapse;padding-top: 20px;padding-right: 20px;padding-bottom: 10px;padding-left: 20px;">
       <p class="large" style="font-size: 21px;line-height: 30px;font-weight: 400;color:{{ item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">
@@ -44,4 +44,4 @@
         <!-- end salutation -->
     </td>
   </tr>
-  <!-- INTRO End -->
+  <!-- INTRO End --><!-- end toc-head-item.html -->
