--- a/templates/full-width-item-header.html
+++ b/templates/full-width-item-header.html
@@ -1,14 +1,15 @@
     <!-- start full-width-item-header.html-->
-    <table bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
-      <tbody>
+    <!-- mayday mayday mayday -->
+    <!-- <table bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
+      <tbody> -->
         <tr>
           <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
         </tr>
                <tr>
-                <td align="center" class="headline" style="{{ item['background_color']}};border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 30px;padding-left: 0px;padding-bottom: 15px;border-radius: 0.8rem;">
-                  <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;">{{ item['header_text']}}</h1>
+                <td align="center" class="headline" style="background-color: {{ item['background_color']}};border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 30px;padding-left: 0px;padding-bottom: 15px;border-top-left-radius: 0.8rem; border-top-right-radius: 0.8rem;">
+                  <p style="mso-line-height-rule: exactly;font-size: 20px;font-family: {{ item['font-family'] }}; font-style: {{ item['font-style']}}; font-weight: {{item['font-weight']}}; line-height: 22px;color: #000000;margin: 0;padding: 0;">{{ item['header_text']}}</p>
                 </td>
               </tr>
-              </tbody>
-              </table>
+              <!-- </tbody>
+              </table> -->
     <!-- end full-width-item-header.html -->
