--- a/templates/box-feature.html
+++ b/templates/box-feature.html
@@ -1,5 +1,8 @@
                 <!-- start box-feature.html -->
                 <tr>
+                  <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
+                </tr>
+                <tr>
                   <td align="left" style="border-collapse: collapse;background-color: {{ item['background_color'] }};border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;">
                     <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: {{ item['header_font_weight']}};line-height: 23px;color: {{ item['text_color'] }};margin: 0;padding: 0;">{{ item ['callout'] }}</h1>
                   </td>
@@ -9,7 +12,7 @@
                     <!--[if mso]>
               <table border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr><td width="35%" valign="top"><![endif]-->
-                    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
+                    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="300">
                       <tbody>
                         <tr>
                           <td class="padt20 padr10 padb5 padl20" style="border-collapse: collapse;padding-top: 0px;padding-right: 10px;padding-bottom: 5px;padding-left: 20px;" valign="top">
@@ -20,10 +23,10 @@
                     </table>
 
                     <!--[if mso]></td><td width="65%" valign="top"><![endif]-->
-                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
+                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="360">
                       <tbody>
                         <tr>
-                          <td class="padt15 padr20 padl10 padb0 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-bottom: 0px;padding-left: 10px;" valign="top">
+                          <td class="padt15 padr20 padl10 padb0 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-bottom: 15px;padding-left: 10px;" valign="top">
                             <h2 style="mso-line-height-rule: exactly;font-size: 15px;line-height: 23px;font-weight: 600;color:{{ item['light_text_color'] }};margin: 0;padding: 0 0 5px 0;">
                               <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['link_text_1']}}</a> →</h2>
                             <p style="font-family: '{{ item['subtitle_font_family'] }}'; font-style: '{{ item['subtitle_font_style'] }}';font-size: 14px;line-height: 15px;font-weight:  '{{ item['subtitle_font_weight']}}';color: {{ item['light_text_color'] }};padding: 0;margin: 0;">{{ item['subtitle'] }}</p>
