--- a/templates/box-item.html
+++ b/templates/box-item.html
@@ -1,9 +1,8 @@
                <!-- start box-item.html -->
-
               <tr>
-                <td align="left" style="{{ item['background_color']}}" ;border-collapse: collapse; border-radius: 0.8rem;">
+                <td align="left" style="background-color: {{ item['background_color']}};border-collapse: collapse; border-bottom-left-radius: 0.8rem; border-bottom-right-radius: 0.8rem;">
 
-                  <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="416">
+                  <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="300">
                     <tbody>
                       <tr>
                         <td class="padt20 padr10 padl20" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-left: 20px;" valign="top">
@@ -16,7 +15,7 @@
                   </table>
                 
                   <!--[if mso]></td><td width="35%" valign="top"><![endif]-->
-                  <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="224">
+                  <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="360">
                     <tbody>
                       <tr>
                         <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
