--- a/templates/featured-item.html
+++ b/templates/featured-item.html
@@ -1,11 +1,14 @@
 <!-- start featured-item.html-->
 <tr>
-    <td style="background:{{ item['background_color'] }}">
+  <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
+</tr>
+<tr>
+    <td style="background-color:{{ item['background_color'] }}; border-bottom-left-radius: 0.8rem; border-bottom-right-radius: 0.8rem;">
         <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
             <tbody>
               <tr>
                 <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-                  <p style="font-family: '{{ item['font_family'] }}'; '{{ item['font_style'] }}' font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
+                  <p style="font-family: '{{ item['font_family'] }}'; font-style:'{{ item['font_style'] }}'; font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
                     <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ"" width="290" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;">
                   </p>
                 </td>
