--- a/templates/featured-special.html
+++ b/templates/featured-special.html
@@ -1,17 +1,20 @@
                 <!-- start featured-special.html-->
                 <tr>
-                  <td align="left" style="border-radius: 0.5rem; border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px; padding-bottom: 15px; background-color: #E1EFE6;">
+                  <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
+                </tr>
+                <tr>
+                  <td align="left" style="border-top-left-radius: 0.8rem; border-top-right-radius: 0.8rem; border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px; padding-bottom: 15px; background-color:{{ item['background_color']}}">
                     <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;"><a href="{{ item['link_ref']}}" style="text-decoration: none; display: inline-block; font-size: 1.2rem;color:#5f5454">{{ item['link_text']}}</a><a href="{{ item['link_ref']}}" style="text-decoration: none;display: inline-block;font-size: 12px;line-height: 25px;font-weight: 400;float: right;color: #6d6b57 !important;">{{ item['title']}}</a>
                     </h1>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" class="rounded-box-1" style="border-radius: 0.5rem; border-collapse: collapse;background-color: #E1EFE6;">
+                  <td align="left" class="rounded-box-1" style="border-bottom-left-radius: 0.8rem; border-bottom-right-radius: 0.8rem; border-collapse: collapse;background-color: {{ item['background_color']}}">
 
                     <!--[if mso]>
             <table border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr><td width="35%" valign="top"><![endif]-->
-                    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="280">
+                    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="300">
                       <tbody>
                         <tr>
                           <td class="padt20 padr10 padl20 padb5" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-bottom: 5px;padding-left: 20px;" valign="top">
@@ -24,7 +27,7 @@
                     </table>
 
                     <!--[if mso]></td><td width="65%" valign="top"><![endif]-->
-                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
+                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="360">
                       <tbody>
                         <tr>
                           <td class="padt15 padr20 padl10 padb5 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-bottom: 5px;padding-left: 10px;" valign="top">
