--- a/templates/full-width-item.html
+++ b/templates/full-width-item.html
@@ -1,12 +1,12 @@
 <!-- start full-width-item.html-->
 <tr>
     <td style="background:{{ item['background_color'] }}">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
+        <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="600px">
             <tbody>
               <tr>
                 <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
                   <p style="font-family: '{{ item['font_family'] }}'; '{{ item['font_style'] }}' font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
-                    <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ"" width="600" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;">
+                    <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ"" width="600px" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 600px;width: 100%; border-bottom-right-radius: 0.8rem; border-bottom-left-radius: 0.8rem;">
                   </p>
                 </td>
               </tr>
@@ -17,7 +17,7 @@
     <tr>
       <td style="background:{{ item['background_color'] }}">
         <!--[if mso]></td><td width="100%" valign="top"><![endif]-->
-          <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
+          <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="600">
             <tbody>
               <tr>
                 <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
