--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -61,7 +61,7 @@
       src: url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff2') format("woff2"),
       url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff') format("woff");
       font-family: 'WarblerText';
-      font-style: normal;
+      font-style: bold;
       font-weight: 700;
     }
     @font-face {
@@ -236,7 +236,7 @@
         <tr>
           <td align="center" bgcolor="#FFFFFF" style="background-color: #FFFFFF;border-collapse: collapse;" valign="top">
 
-            <!-- 600px container (white background) -->
-            <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 640px;max-width: 640px;" width="640">
+            <!-- 660px container (white background) -->
+            <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 660px;max-width: 660px;">
               <tbody>
 <!-- end top.html -->
