--- a/templates/accessory-item-header.html
+++ b/templates/accessory-item-header.html
@@ -3,7 +3,7 @@
                   <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
                 </tr>
                 <tr>
-                  <td align="left" class="headline" style="border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;">
+                  <td align="left" class="headline" style="border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px; background-color: {{item['background_color']}}">
                     <h1 style="mso-line-height-rule: exactly;font-family: {{ item['font-family'] }}; font-style: {{ item['font-style'] }}; font-weight: {{ item['font_weight']}}; font-size: 21px;font-weight: 600;line-height: 23px;color:{{ item['text_color']}};margin: 0;padding: 0;">{{ item['title']}} <span class="h1byline grey browser" href="" style="font-family: {{ item['font-family'] }}; font-style: {{ item['font-style'] }}; font-weight: {{ item['font_weight']}}; text-decoration: none;text-align: right;display: inline-block;font-size: 12px;line-height: 25px;font-weight: 400;float: right;color:{{ item['light_text_color']}} !important;">{{item['subtitle']}}</span>
                     </h1>
                   </td>
