--- a/templates/discord-callout-item.html
+++ b/templates/discord-callout-item.html
@@ -11,10 +11,10 @@
                         <tr>
                           <td class="padt15 padr10 padl20" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
                             <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: {{ item['text_color']}}; margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;item['text_color']}} !important;">
+                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: {{item['text_color']}} !important;">
                                 {{ item['link_text'] }}
                               </a> ➜</h2>
-                            <h3 style="mso-line-height-rule: exactly;font-size: 12px;line-height: 12px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color:color: {{ item['light_text_color']}} !important;">{{ item['user_callout']}}</h3>
+                            <p style="mso-line-height-rule: exactly;font-size: 12px;line-height: 14px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color:{{ item['light_text_color']}} !important;">{{ item['user_callout']}}</p>
                           </td>
                         </tr>
                       </tbody>
