--- a/templates/featured-item.html
+++ b/templates/featured-item.html
@@ -9,7 +9,7 @@
               <tr>
                 <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
                   <p style="font-family: '{{ item['font_family'] }}'; font-style:'{{ item['font_style'] }}'; font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
-                    <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ"" width="290" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;">
+                    <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="290" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;">
                   </p>
                 </td>
               </tr>
