--- a/templates/full-width-item.html
+++ b/templates/full-width-item.html
@@ -1,12 +1,12 @@
 <!-- start full-width-item.html-->
 <tr>
-    <td style="background:{{ item['background_color'] }}">
+    <td style="background:{{ item['background_color'] }}; ">
         <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="600px">
             <tbody>
               <tr>
-                <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-                  <p style="font-family: '{{ item['font_family'] }}'; '{{ item['font_style'] }}' font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
-                    <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ"" width="600px" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 600px;width: 100%; border-bottom-right-radius: 0.8rem; border-bottom-left-radius: 0.8rem;">
+                <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px;" valign="top">
+                  <p style="font-family: '{{ item['font_family'] }}'; '{{ item['font_style'] }}' font-size: 16px;line-height: 22px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
+                    <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ"" width="600px" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 600px;width: 100%; border-radius: 0.8rem;">
                   </p>
                 </td>
               </tr>
@@ -15,16 +15,16 @@
     </td>
     </tr>
     <tr>
-      <td style="background:{{ item['background_color'] }}">
+      <td style="background:{{ item['background_color'] }}; border-bottom-left-radius: 0.8rem; border-bottom-right-radius: 0.8rem;">
         <!--[if mso]></td><td width="100%" valign="top"><![endif]-->
           <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="600">
             <tbody>
               <tr>
                 <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
-                  <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
+                  <p class="padb5" style="mso-line-height-rule: exactly;font-size: 15px;line-height: 20px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px; font-family: '{{ item['font_family'] }}'; style:'{{ item['font_style'] }};">
                     <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['title']}}</a></h2>
-                  <h3 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: {{ item['light_text_color']}} !important;">{{ item['subtitle']}}</h3>
-                  <p style="font-family: '{{ item['font_family'] }}';  '{{ item['font_style'] }}; font-size: 16px;line-height: 23px;font-weight: 400;color:{{ item['text_color' ]}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }}<br>
+                  <p style="mso-line-height-rule: exactly;font-size: 15px;font-family: '{{ item['font_family'] }}'; font-style:'{{ item['font_style'] }}; line-height: 20px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: {{ item['light_text_color']}} !important; ">{{ item['subtitle']}}</p>
+                  <p style="font-family: '{{ item['font_family'] }}'; style:'{{ item['font_style'] }}; font-size: 15px;line-height: 20px;font-weight: 400;color:{{ item['text_color' ]}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }}<br><br>
                     <a href="{{ item['link_ref'] }}" style="text-decoration: underline;color:{{ item['text_color' ]}} !important;">Read More</a> ⇒</p>
                 </td>
               </tr>
