Trying to get w12 done..

--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -190,7 +190,7 @@
       <tbody>
         <tr>
           <!-- HEADER COLOR -->
-          <td align="center" style="background-color: #D1D5DE; border-collapse: collapse;" valign="top">
+          <td align="center" style="padding-left: 2rem; background-color: #D1D5DE; border-collapse: collapse;" valign="top">
             
             <!-- 640px container -->
             <table border="0" cellpadding="0" cellspacing="0" class="header mobt0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 640px;max-width: 640px;padding-top: 20px;" width="640">
@@ -234,7 +234,7 @@
 
 
         <tr>
-          <td align="center" style="background-color: #FFFFFF;border-collapse: collapse;" valign="top">
+          <td align="center" style="padding-left: 2rem; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
 
             <!-- 660px container (white background) -->
             <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 660px;max-width: 660px;">
