--- a/templates/accessory-item.html
+++ b/templates/accessory-item.html
@@ -27,7 +27,7 @@
                                 <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['title']}}
                                 </a> ↻</h2> : {{ item['subtitle']}}
                               <p style="mso-line-height-rule: exactly;font-size: 12px;line-height: 16px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: #707070 !important;">{{ item['author_username']}}</p>
-                              <p style="font-family: '{{ item['font-family'] }}'; font-style: {{ item['font-style'] }}; font-weight: {{ item['font_weight']}}; font-size: 15px;line-height: 18px; color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">{{item['main_copy']}}</p><p style="font-size: 15px;line-height: 15px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;"><a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color']}} !important;">Check It ↻</a>.</p>
+                              <p style="font-family: '{{ item['font_family'] }}'; font-style: {{ item['font-style'] }}; font-weight: {{ item['font_weight']}}; font-size: 15px;line-height: 18px; color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">{{item['main_copy']}}</p><p style="font-size: 15px;line-height: 15px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;"><a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color']}} !important;">Check It ↻</a>.</p>
                             </td>
                           </tr>
                         </tbody>
