--- a/templates/static/bottom.html
+++ b/templates/static/bottom.html
@@ -39,14 +39,14 @@
                     <tbody>
                       <tr>
                         <td style="text-align: center;border-collapse: collapse;padding-top: 20px;padding-right: 20px;padding-left: 20px; padding-bottom: 10px;" valign="top">
-                          <p style="mso-line-height-rule: exactly;font-family: FormaDJRVariable;font-variation-settings: 'wght' 200; font-size: 24px;line-height: 24px;color: #000000;margin: 0;padding: 0;padding-bottom: 0px;">Colophon</p>
+                          <p style="mso-line-height-rule: exactly;font-family: FormaDJRVariable;font-variation-settings: 'wght' 400; font-size: 20px;line-height: 20px;color: #000000;margin: 0;padding: 0;padding-bottom: 0px;">Colophon</p>
                           </td>
                       </tr>
                       <tr>
                         <td style="text-align: center;border-collapse: collapse;padding-top: 0px;padding-right: 20px;padding-left: 20px;" valign="top">
                           <h1 class="padb15" style="mso-line-height-rule: exactly;font-family: FormaDJRVariable; font-size: 24px;font-style: normal;line-height: 23px;color: #000000;margin: 0;padding: 0;padding-bottom: 15px;"><a href="%FORWARD2FRIEND%" style="text-decoration: underline;color: #000000 !important;>Amplify This</h1>
-                          <p class="share" style="font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 15px 5px;margin: 0;margin-bottom: 15px;border-radius: 6px; border: 1px #5f5f5f;background: #f0f0f0;text-align: center;">
-                            <a href="https://backoffice.nearfuturelaboratory.com/outbox/issues/2024/w10y24.html" style="text-decoration: underline;color: #000000 !important;"><b style="font-weight: 600;">backoffice.nearfuturelaboratory.com/outbox/issues/2024/w10y24.html</b></a>
+                          <p class="share" style="font-size: 9px;line-height: 20px;font-weight: 400;color: #000000;padding: 15px 5px;margin: 0;margin-bottom: 15px;border-radius: 6px; border: 1px #5f5f5f;background: #f0f0f0;text-align: center;">
+                            <a href="https://backoffice.nearfuturelaboratory.com/outbox/issues/2024/w11y24.html" style="text-decoration: underline;color: #000000 !important;"><b style="font-size: 18px; font-weight: 400;">backoffice.nearfuturelaboratory.com/outbox/issues/2024/w11y24.html</b></a>
                           </p>
                         </td>
                       </tr>
