--- a/templates/accessory-item.html
+++ b/templates/accessory-item.html
@@ -23,9 +23,9 @@
                         <tbody>
                           <tr>
                             <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px; background-color: {{item['background_color']}}" valign="top">
-                              <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
+                              <p class="padb5" style="mso-line-height-rule: exactly;font-family: '{{ item['font_family'] }}'; font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
                                 <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['title']}}
-                                </a> ↻</h2> : {{ item['subtitle']}}
+                                </a> ↻</p>{{ item['subtitle']}}
                               <p style="mso-line-height-rule: exactly;font-size: 12px;line-height: 16px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: #707070 !important;">{{ item['author_username']}}</p>
                               <p style="font-family: '{{ item['font_family'] }}'; font-style: {{ item['font-style'] }}; font-weight: {{ item['font_weight']}}; font-size: 15px;line-height: 18px; color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">{{item['main_copy']}}</p><p style="font-size: 15px;line-height: 15px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;"><a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color']}} !important;">Check It ↻</a>.</p>
                             </td>
