--- a/templates/box-feature.html
+++ b/templates/box-feature.html
@@ -3,12 +3,12 @@
                   <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
                 </tr>
                 <tr>
-                  <td align="left" style="border-collapse: collapse;background-color: {{ item['background_color'] }};border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;">
+                  <td align="left" style="border-collapse: collapse;background-color: {{ item['background_color'] }};border-bottom: 0px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;">
                     <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: {{ item['header_font_weight']}};line-height: 23px;color: {{ item['text_color'] }};margin: 0;padding: 0;">{{ item ['callout'] }}</h1>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" class="box-red" style="border-collapse: collapse;background: hsl(0, 0%, 94%);">
+                  <td align="left" class="box-red" style="border-collapse: collapse; background-color: {{ item['background_color'] }};">
                     <!--[if mso]>
               <table border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr><td width="35%" valign="top"><![endif]-->
