--- a/templates/toc-head-item.html
+++ b/templates/toc-head-item.html
@@ -1,7 +1,7 @@
 <!-- INTRO Start --><!-- start toc-head-item_1 -->
 
 <tr>
-  <td align="center" bgcolor="#FFFFFF" style="background-color: #FFFFFF;border-collapse: collapse;" valign="top">      
+  <td align="center" style="background-color: {{ item['background_color']}};border-collapse: collapse;" valign="top">      
     <!-- start subject-line.html -->
       <!--[if mso]>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -10,9 +10,9 @@
         <tbody>
           <tr>
             <td class="padt15 padr10 padl20" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
-              <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: {{ item['text_color']}};margin: 0;padding: 0;">
+              <p style="font-family: '{{ item['font_family'] }}'; mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: {{ item['text_color']}};margin: 0;padding: 0;">
                 {{ item['short_title']}}
-              </h1>
+              </p>
               
             </td>
           </tr>
@@ -24,7 +24,8 @@
         <tbody>
           <tr>
             <td style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-              <p class="small grey" style="font-size: 14px;line-height: 19px;font-weight: 400;color: {{ item['light_text_color']}} !important;padding: 0;margin: 0;margin-bottom: 15px;"><a class="grey" href="{{item['view_online_url']}}" style="text-decoration: underline;color: {{ item['light_text_color']}} !important;">View/share online</a> →</p>
+              <p class="small grey" style="font-family: '{{ item['font_family'] }}';font-size: 15px;line-height: 19px;font-weight: 400;color: {{ item['text_color']}} !important;padding: 0;margin: 0;margin-bottom: 15px;">
+                <a class="grey" href="{{item['view_online_url']}}" style="text-decoration: underline;color: {{ item['light_text_color']}} !important;">View</a>/<a class="grey" href="{{item['share_online_url']}}" style="text-decoration: underline;color: {{ item['light_text_color']}}  !important;">share online</a> →</p>
             </td>
           </tr>
         </tbody>
@@ -35,12 +36,12 @@
   </tr>
   <!-- end subject-line.html -->
   <tr>
-    <td align="left" class="padt20 padl20 padr20 padb10" style="border-collapse: collapse;padding-top: 20px;padding-right: 20px;padding-bottom: 10px;padding-left: 20px;">
-      <p class="large" style="font-size: 21px;line-height: 30px;font-weight: 400;color:{{ item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">
+    <td align="left" class="padt20 padl20 padr20 padb10" style="background-color: {{ item['background_color']}}; border-collapse: collapse;padding-top: 20px;padding-right: 20px;padding-bottom: 10px;padding-left: 20px;">
+      <p class="large" style="font-family: '{{ item['font_family'] }}';font-size: 21px;line-height: 24px;font-weight: 400;color:{{ item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">
 {{ item['main_toc_text'] }}
       </p>
       <!-- start salutation -->
-      <p class="small grey padt20" style="font-size: 14px;line-height: 19px;font-weight: 400;color: #707070 !important;padding: 0;margin: 0;margin-bottom: 15px;padding-top: 20px;">{{ item['salutation'] }}</p>
+      <p class="small grey padt20" style="font-family: '{{ item['font_family'] }}';font-size: 14px;line-height: 19px;font-weight: 400;color: {{ item['text_color']}} !important;padding: 0;margin: 0;margin-bottom: 15px;padding-top: 20px;">{{ item['salutation'] }}</p>
         <!-- end salutation -->
     </td>
   </tr>
